name:      monadvar
version:   0.0.1.0
license:   MIT
license-file: LICENSE
author:    Alistair Lynn
maintainer: Alistair Lynn <arplynn@gmail.com>
category:  Control
synopsis:  A monad class for monads with mutable variables
description:
    Monads with mutable variables.
build-type:  Simple
cabal-version: >= 1.6

library
  exposed-modules: Control.Monad.Variable
  ghc-options:     -Wall
  build-depends:   base >= 3, mtl >= 2, transformers >= 0.3, stm >= 2.4
